@@ -73,7 +73,7 @@
 		<sonar.jacoco.reportPath>${project.basedir}/../target/jacoco.exec</sonar.jacoco.reportPath>
 		<version.maven-jacoco>0.8.5</version.maven-jacoco>
 		<version.maven-sonar>3.7.0.1746</version.maven-sonar>
-		<argLine>-Xms256m -Xmx512m -XX:MaxPermSize=128m -ea
+		<argLine>-Xms256m -Xmx512m -ea
 			-Dfile.encoding=UTF-8</argLine>
 		<sonar.sourceEncoding>UTF-8</sonar.sourceEncoding>
 	</properties>
